--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,24 @@ click==8.1.7
 colorama==0.4.6
 dataclasses-json==0.6.4
 distro==1.9.0
+docstring_parser==0.16
 frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.42
+google-api-core==2.18.0
+google-auth==2.29.0
+google-cloud-aiplatform==1.48.0
+google-cloud-bigquery==3.21.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.12.3
+google-cloud-storage==2.16.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
 greenlet==3.0.3
+grpc-google-iam-v1==0.13.0
+grpcio==1.62.2
+grpcio-status==1.62.2
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.27.0
@@ -44,13 +58,17 @@ orjson==3.9.15
 packaging==23.2
 pandas==2.2.1
 pillow==10.2.0
+proto-plus==1.23.0
 protobuf==4.25.3
 pyarrow==15.0.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.6.4
 pydantic_core==2.16.3
 pydeck==0.8.1b0
 Pygments==2.17.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-environ==0.4.54
 pytz==2024.1
 PyYAML==6.0.1
@@ -58,7 +76,9 @@ referencing==0.33.0
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
+rsa==4.9
 setuptools==68.2.2
+shapely==2.0.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
@@ -77,6 +97,7 @@ typing-inspect==0.9.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
+vertexai==1.48.0
 watchdog==4.0.0
 wheel==0.41.2
 yarl==1.9.4
